fix(Board): make sure lists do not overflow outside of board's height

--- a/src/app/components/Board/Board.scss
+++ b/src/app/components/Board/Board.scss
@@ -44,7 +44,7 @@
 .lists-wrapper {
   display: inline-flex;
   box-sizing: border-box;
-  height: 100%;
+  height: 90vh;
   padding: 85px 5px 8px 5px;
   display: flex;
   flex-wrap: wrap;
